@@ -814,4 +814,6 @@
 	* tools/m2s-pipeline: Tool for displaying pipeline debug information moved to the 'tools'
 		directory. The dependency with the 'ncurses' library is removed from the
 		central Multi2Sim code.
+	* tools/Makefile.am: -lncurses flag removed from linking options.
+
 
